--- a/index.html
+++ b/index.html
@@ -118,25 +118,21 @@
                             </div>         
                         </div>
                         <!-- MOBILE NUMBER -->
-                        <div class="col l12 m12 s12  mobile sidebar-item">
+                        <!-- <div class="col l12 m12 s12  mobile sidebar-item">
                             <div class="row">                                
                                 <div class="col m12 s12 l3 icon">
-                                    <i class="fa fa-phone"></i> <!-- icon -->
+                                    <i class="fa fa-phone"></i> 
                                 </div>                                
                                 <div class="col m12 s12 l9 info wow fadeIn a2" data-wow-delay="0.2s" >
                                     <div class="section-item-details">
                                         <div class="personal">
-                                            <h4><a href="tel:555-555-5555">(111)-333-4444</a></h4> <!-- Number -->             
+                                            <h4><a href="">(010)-2015-8382</a></h4>             
                                             <span>mobile</span> 
-                                        </div>
-                                        <div class="work">
-                                            <h4><a href="tel:555-555-5555">(121)-323-3494</a></h4> <!-- Number -->
-                                            <span>work</span> 
                                         </div>
                                     </div>
                                 </div>
                             </div>             
-                        </div>
+                        </div> -->
                         <!--  EMAIL -->
                         <div class="col l12 m12 s12  email sidebar-item ">
                             <div class="row">                                
@@ -150,29 +146,12 @@
                                             <span>personal</span> 
                                         </div>
                                         <div class="work">                                 
-                                            <h4><a href="mailto:someone@example.com">ar@deviserweb.com</a></h4> <!-- Email -->
+                                            <h4><a href="mailto:someone@example.com">minyelee@korea.ac.kr</a></h4> <!-- Email -->
                                             <span>work</span> <br>
                                         </div>
                                     </div>
                                 </div> 
                             </div>          
-                        </div>
-                        <!-- ADDRESS  -->
-                        <div class="col l12 m12 s12  address sidebar-item ">
-                            <div class="row">                                
-                                <div class="col l3 m12  s12 icon">
-                                    <i class="fa fa-home"></i> <!-- icon -->
-                                </div>                                
-                                <div class="col m12 s12 l9 info wow fadeIn a4" data-wow-delay="0.4s">
-                                    <div class="section-item-details">
-                                        <div class="address-details"> <!-- address  -->
-                                            <h4>24 Golden Tower <span>(2nd floor)</span><br>
-                                            Amborkhana, Sylhet.<br>
-                                            <span>SYL-3RF87W</span></h4> 
-                                        </div>                         
-                                    </div>
-                                </div>
-                            </div>            
                         </div>
                         <!-- SKILLS -->
                         <div class="col l12 m12 s12  skills sidebar-item" >
@@ -182,7 +161,7 @@
                                 </div>
                                  <!-- Skills -->
                                 <div class="col m12 l9 s12 skill-line a5 wow fadeIn" data-wow-delay="0.5s">
-                                    <h3>Professional Skills </h3>
+                                    <h3>Certificates</h3>
                                     
                                     <span>Adobe Photoshop</span>                                    
                                     <div class="progress">
@@ -240,10 +219,10 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <div class="custom-content col s12 m12 l10 wow fadeIn a1" data-wow-delay="0.1s" >
-                                <h2>Education </h2>
-                                 <div class="custom-content-wrapper wow fadeIn a4" data-wow-delay="0.2s" >
-                                    <h3>Master Degree of Industrial Management Engineering <span>@Korea University</span></h3>
-                                    <span>SEP 2019 - Current </span>
+                                <h2>Education</h2>
+                                 <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s" >
+                                    <h3>Industrial Management Engineering <span>@Korea University</span></h3>
+                                    <span>SEP 2019 - Current</span>
                                     <p>Fusion Data Analytics and Artificial Intelligence Lab</p>
                                 </div>
                                 <div class="custom-content-wrapper wow fadeIn a3" data-wow-delay="0.3s" >
@@ -251,8 +230,8 @@
                                     <span>JAN 2012 - DEC 2012 </span>
                                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p> -->
                                 </div>
-                                <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.4s" >
-                                    <h3>Bachelor Degree of Computer Science and Electrical Engineering<span>@Handong Global University</span></h3>
+                                <div class="custom-content-wrapper wow fadeIn a4" data-wow-delay="0.4s" >
+                                    <h3>Computer Science and Electrical Engineering <span>@Handong Global University</span></h3>
                                     <span>MAR 2011 - FEB 2016 </span>
                                     <!-- <p>Bachelor</p> -->
                                 </div>
@@ -331,10 +310,28 @@
                                 <h2>Platform Development</h2>
 
                                 <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s">
-                                    <h3>Software Engineer <span>@Institute of Sustainable Development</span></h3>
+                                    <h3>Software Engineer </h3>
                                     <span>MAR 2016 - AUG 2019 </span>
-                               <!--      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                                        labore et dolore magna aliqua. </p> -->
+                                </div>
+                                <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s">
+                                    <h3>Software Engineer </h3>
+                                    <span>MAR 2016 - AUG 2019 </span>
+                                </div>
+                                <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s">
+                                    <h3>Software Engineer </h3>
+                                    <span>MAR 2016 - AUG 2019 </span>
+                                </div>
+                                <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s">
+                                    <h3>Software Engineer </h3>
+                                    <span>MAR 2016 - AUG 2019 </span>
+                                </div>
+                                <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s">
+                                    <h3>Software Engineer </h3>
+                                    <span>MAR 2016 - AUG 2019 </span>
+                                </div>
+                                <div class="custom-content-wrapper wow fadeIn a2" data-wow-delay="0.2s">
+                                    <h3>Software Engineer </h3>
+                                    <span>MAR 2016 - AUG 2019 </span>
                                 </div>
                             </div>                            
                         </div>
